@@ -21,16 +21,24 @@ PDF::API2::NamedDestination - Add named destination shortcuts to a PDF
 
 =over
 
-=item $dest = PDF::API2::NamedDestination->new $pdf
+=item $destination = PDF::API2::NamedDestination->new($pdf, ...)
+
+Creates a new named destination object.  If any additional arguments are
+present, they will be passed to C<destination()>.
 
 =cut
 
 sub new {
-    my ($class, $pdf) = @_;
+    my $class = shift();
+    my $pdf = shift();
     $pdf = $pdf->{'pdf'} if $pdf->isa('PDF::API2');
 
     my $self = $class->SUPER::new($pdf);
     $pdf->new_obj($self);
+
+    if (@_) {
+        return $self->destination(@_);
+    }
 
     return $self;
 }
@@ -45,129 +53,135 @@ sub new_api {
     return $destination;
 }
 
-=item $dest->link $page, %opts
+=item $destination->destination($page, $location, @args)
 
-Defines the destination as launch-page with page $page and
-options %opts (-rect, -border or 'dest-options').
+A destination defines a particular view of a PDF, consisting of a page object,
+the location of the window on that page, and possible coordinate and zoom
+arguments.
 
-=cut
+    my $dest1 = PDF::API2::NamedDestination->new($pdf);
+    $dest->destination($pdf->open_page(1), 'xyz' => ($x, $y, $zoom));
 
-sub link {
-    my ($self, $page, %opts) = @_;
+    my $dest2 = PDF::API2::NamedDestination->new($pdf);
+    $dest->destination($pdf->open_page(2), 'fit');
 
-    $self->{'S'} = PDFName('GoTo');
-    $self->dest($page, %opts);
+The following locations are available:
 
-    return $self;
-}
+=over
 
-=item $dest->url $url, %opts
+=item xyz ($left, $top, $zoom)
 
-Defines the destination as launch-url with url $url and
-options %opts (-rect and/or -border).
+Display the page with the coordinates (C<$left>, C<$top>) positioned at the
+upper-left corner of the window and the contents of the page magnified by the
+factor C<$zoom>. An C<undef> value for any of the arguments specifies that the
+current value of that argument shall be retained unchanged.  A zoom factor of 0
+has the same meaning as C<undef>.
 
-=cut
+=item fit
 
-sub url {
-    my ($self, $url, %opts) = @_;
+Display the page with its contents magnified just enough to fit the entire page
+within the window both horizontally and vertically. If the required horizontal
+and vertical magnification factors are different, use the smaller of the two,
+centering the page within the window in the other dimension.
 
-    $self->{'S'} = PDFName('URI');
-    $self->{'URI'} = PDFStr($url);
+=item fith ($top)
 
-    return $self;
-}
+Display the page with the vertical coordinate C<$top> positioned at the top edge
+of the window and the contents of the page magnified just enough to fit the
+entire width of the page within the window.  An C<undef> value for C<$top>
+specifies that the current value of that argument shall be retained unchanged.
 
-=item $dest->file $file, %opts
+=item fitv ($left)
 
-Defines the destination as launch-file with filepath $file and
-options %opts (-rect and/or -border).
+Display the page with the horizontal coordinate C<$left> positioned at the left
+edge of the window and the contents of the page magnified just enough to fit the
+entire height of the page within the window.  An C<undef> value for C<$left>
+specifies that the current value of that argument shall be retained unchanged.
 
-=cut
+=item fitr ($left, $bottom, $right, $top)
 
-sub file {
-    my ($self, $url, %opts) = @_;
-
-    $self->{'S'} = PDFName('Launch');
-    $self->{'F'} = PDFStr($url);
-
-    return($self);
-}
-
-=item $dest->pdfile $pdfile, $pagenum, %opts
-
-Defines the destination as pdf-file with filepath $pdfile, $pagenum
-and options %opts (same as dest).
-
-=cut
-
-sub pdfile {
-    my ($self, $url, $pnum, %opts) = @_;
-
-    $self->{'S'} = PDFName('GoToR');
-    $self->{'F'} = PDFStr($url);
-
-    $self->dest(PDFNum($pnum), %opts);
-
-    return $self;
-}
-
-=item $dest->dest( $page, -fit => 1 )
-
-Display the page designated by page, with its contents magnified just enough to
-fit the entire page within the window both horizontally and vertically. If the
-required horizontal and vertical magnification factors are different, use the
-smaller of the two, centering the page within the window in the other dimension.
-
-=item $dest->dest( $page, -fith => $top )
-
-Display the page designated by page, with the vertical coordinate top positioned
-at the top edge of the window and the contents of the page magnified just enough
-to fit the entire width of the page within the window.
-
-=item $dest->dest( $page, -fitv => $left )
-
-Display the page designated by page, with the horizontal coordinate left
-positioned at the left edge of the window and the contents of the page magnified
-just enough to fit the entire height of the page within the window.
-
-=item $dest->dest( $page, -fitr => [ $left, $bottom, $right, $top ] )
-
-Display the page designated by page, with its contents magnified just enough to
-fit the rectangle specified by the coordinates left, bottom, right, and top
+Display the page with its contents magnified just enough to fit the rectangle
+specified by the coordinates C<$left>, C<$bottom>, C<$right>, and C<$top>
 entirely within the window both horizontally and vertically. If the required
 horizontal and vertical magnification factors are different, use the smaller of
 the two, centering the rectangle within the window in the other dimension.
 
-=item $dest->dest( $page, -fitb => 1 )
+=item fitb
 
-(PDF 1.1) Display the page designated by page, with its contents magnified just
-enough to fit its bounding box entirely within the window both horizontally and
-vertically. If the required horizontal and vertical magnification factors are
-different, use the smaller of the two, centering the bounding box within the
-window in the other dimension.
+Display the page with its contents magnified just enough to fit its bounding box
+entirely within the window both horizontally and vertically. If the required
+horizontal and vertical magnification factors are different, use the smaller of
+the two, centering the bounding box within the window in the other dimension.
 
-=item $dest->dest( $page, -fitbh => $top )
+=item fitbh ($top)
 
-(PDF 1.1) Display the page designated by page, with the vertical coordinate top
-positioned at the top edge of the window and the contents of the page magnified
-just enough to fit the entire width of its bounding box within the window.
+Display the page with the vertical coordinate C<$top> positioned at the top edge
+of the window and the contents of the page magnified just enough to fit the
+entire width of its bounding box within the window.  An C<undef> value for
+C<$top> specifies that the current value of that argument shall be retained
+unchanged.
 
-=item $dest->dest( $page, -fitbv => $left )
+=item fitbv ($left)
 
-(PDF 1.1) Display the page designated by page, with the horizontal coordinate
-left positioned at the left edge of the window and the contents of the page
-magnified just enough to fit the entire height of its bounding box within the
-window.
+Display the page with the horizontal coordinate C<$left> positioned at the left
+edge of the window and the contents of the page magnified just enough to fit the
+entire height of its bounding box within the window.  An C<undef> value for
+C<$left> specifies that the current value of that argument shall be retained
+unchanged.
 
-=item $dest->dest( $page, -xyz => [ $left, $top, $zoom ] )
-
-Display the page designated by page, with the coordinates (left, top) positioned
-at the top-left corner of the window and the contents of the page magnified by
-the factor zoom. A zero (0) value for any of the parameters left, top, or zoom
-specifies that the current value of that parameter is to be retained unchanged.
+=back
 
 =cut
 
+sub _array {
+    my $page = shift();
+    my $location = shift();
+    return PDFArray($page, PDFName($location),
+                    map { defined($_) ? PDFNum($_) : PDFNull() } @_);
+}
+
+sub _destination {
+    my ($page, $location, @args) = @_;
+    return _array($page, 'XYZ', undef, undef, undef) unless $location;
+
+    my %arg_counts = (
+        xyz   => 3,
+        fit   => 0,
+        fith  => 1,
+        fitv  => 1,
+        fitr  => 4,
+        fitb  => 0,
+        fitbh => 1,
+        fitbv => 1,
+    );
+    my $arg_count = $arg_counts{$location};
+    croak "Invalid location $location" unless defined $arg_count;
+
+    if ($arg_count == 0 and @args) {
+        croak "$location doesn't take any arguments";
+    }
+    elsif ($arg_count == 1 and @args != 1) {
+        croak "$location requires one argument";
+    }
+    elsif ($arg_count == 3 and @args != 3) {
+        croak "$location requires three arguments";
+    }
+    elsif ($arg_count == 4 and @args != 4) {
+        croak "$location requires four arguments";
+    }
+
+    return _array($page, 'XYZ', @args) if $location eq 'xyz';
+    $location =~ s/^fit(.*)$/'Fit' . uc($1 or '')/e;
+    return _array($page, $location, @args);
+}
+
+sub destination {
+    my ($self, $page, $location, @args) = @_;
+    $self->{'D'} = _destination($page, $location, @args);
+    return $self;
+}
+
+# Deprecated; use destination instead, removing hyphen from location name
 sub dest {
     my ($self, $page, %opts) = @_;
 
@@ -175,40 +189,120 @@ sub dest {
         $opts{'-xyz'} = [undef, undef, undef] unless keys %opts;
 
         if (defined $opts{'-fit'}) {
-            $self->{'D'} = PDFArray($page, PDFName('Fit'));
+            $self->{'D'} = _destination($page, 'fit');
         }
         elsif (defined $opts{'-fith'}) {
-            $self->{'D'} = PDFArray($page, PDFName('FitH'), PDFNum($opts{'-fith'}));
+            $self->{'D'} = _destination($page, 'fith', $opts{'-fith'});
         }
         elsif (defined $opts{'-fitb'}) {
-            $self->{'D'} = PDFArray($page, PDFName('FitB'));
+            $self->{'D'} = _destination($page, 'fitb');
         }
         elsif (defined $opts{'-fitbh'}) {
-            $self->{'D'} = PDFArray($page, PDFName('FitBH'), PDFNum($opts{'-fitbh'}));
+            $self->{'D'} = _destination($page, 'fitbh', $opts{'-fitbh'});
         }
         elsif (defined $opts{-fitv}) {
-            $self->{'D'} = PDFArray($page, PDFName('FitV'), PDFNum($opts{'-fitv'}));
+            $self->{'D'} = _destination($page, 'fitv', $opts{'-fitv'});
         }
         elsif (defined $opts{'-fitbv'}) {
-            $self->{'D'} = PDFArray($page, PDFName('FitBV'), PDFNum($opts{'-fitbv'}));
+            $self->{'D'} = _destination($page, 'fitbv', $opts{'-fitbv'});
         }
         elsif (defined $opts{'-fitr'}) {
-            croak "Four coordinates are required" unless @{$opts{'-fitr'}} == 4;
-            $self->{'D'} = PDFArray($page,
-                                    PDFName('FitR'),
-                                    map { PDFNum($_) } @{$opts{'-fitr'}});
+            $self->{'D'} = _destination($page, 'fitr', @{$opts{'-fitr'}});
         }
         elsif (defined $opts{'-xyz'}) {
-            croak "Three coordinates are required" unless @{$opts{'-fitr'}} == 3;
-            $self->{'D'} = PDFArray(
-                $page,
-                PDFName('XYZ'),
-                map { defined $_ ? PDFNum($_) : PDFNull()} @{$opts{'-xyz'}}
-            );
+            $self->{'D'} = _destination($page, 'xyz', @{$opts{'-xyz'}});
         }
     }
 
     return $self;
+}
+
+=item $destination->goto($page, $location, @args)
+
+A go-to action changes the view to a specified destination (page, location, and
+magnification factor).
+
+Parameters are as described in C<destination>.
+
+=cut
+
+sub goto {
+    my $self = shift();
+    $self->{'S'} = PDFName('GoTo');
+    return $self->destination(@_);
+}
+
+# Deprecated; use goto instead, removing hyphen from location name
+sub link {
+    my $self = shift();
+    $self->{'S'} = PDFName('GoTo');
+    return $self->dest(@_);
+}
+
+=item $destination->uri($uri)
+
+A URI action indicates that a URI -- typically a web page -- should be launched.
+
+=cut
+
+# Deprecated (renamed)
+sub url { return uri(@_) }
+
+sub uri {
+    my ($self, $uri) = @_;
+
+    $self->{'S'} = PDFName('URI');
+    $self->{'URI'} = PDFStr($uri);
+
+    return $self;
+}
+
+=item $destination->launch($file)
+
+A launch action launches an application or opens or prints a document.
+
+C<$file> contains the path to the application to be launched or the document to
+be opened or printed.
+
+=cut
+
+# Deprecated (renamed)
+sub file { return launch(@_) }
+
+sub launch {
+    my ($self, $file) = @_;
+
+    $self->{'S'} = PDFName('Launch');
+    $self->{'F'} = PDFStr($file);
+
+    return $self;
+}
+
+=item $destination->pdf($file, $page_number, $location, @args)
+
+Similar to C<goto>, but the destination is in a different PDF file located at
+C<$file>.  C<$page_number> is an integer rather than a page object, and the
+other parameters are as described in C<destination>.
+
+=cut
+
+sub pdf {
+    my ($self, $file, $page_number, $location, @args) = @_;
+
+    $self->{'S'} = PDFName('GoToR');
+    $self->{'F'} = PDFStr($file);
+
+    return $self->destination(PDFNum($page_number), $location, @args);
+}
+
+# Deprecated; use pdf instead, removing hyphen from location name
+sub pdfile {
+    my ($self, $file, $page_number, @args) = @_;
+
+    $self->{'S'} = PDFName('GoToR');
+    $self->{'F'} = PDFStr($file);
+
+    return $self->dest(PDFNum($page_number), @args);
 }
 
 =back
